--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,15 @@
 {
-	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
-	"semi": true,
-	"svelteAllowShorthand": true,
-	"bracketSameLine": true,
-	"svelteIndentScriptAndStyle": true,
-	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "printWidth": 100,
+  "semi": true,
+  "svelteAllowShorthand": true,
+  "bracketSameLine": true,
+  "endOfLine": "crlf",
+  "tabWidth": 2,
+  "svelteIndentScriptAndStyle": true,
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": ["."],
+  "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
