--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --plugin-search-dir . --write ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.21.0",
     "@tauri-apps/cli": "^1.4.0",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
