--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,8 @@
 [package]
-name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
-default-run = "app"
+name = "spotdl"
+version = "0.0.1"
+description = "Unofficial GUI app for spotDL."
+default-run = "spotdl"
 edition = "2021"
 rust-version = "1.60"
 
@@ -17,7 +14,7 @@ tauri-build = { version = "1.4.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.4.0", features = [ "shell-execute", "shell-sidecar"] }
+tauri = { version = "1.4.0", features = [ "shell-open", "shell-execute", "shell-sidecar"] }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
