--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,9 +16,11 @@ rust-version = "1.60"
 tauri-build = { version = "1.4.0", features = [] }
 
 [dependencies]
+log = "0.4.19"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.4.0", features = [] }
+tauri = { version = "1.4.0", features = [ "shell-open", "devtools", "dialog-open", "dialog-confirm", "global-shortcut-all"] }
+tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
 tokio = { version = "1.29.1", features = ["macros"] }
 
